# etherCATInterfaceElmo

./: .gitignore  CMakeLists.txt  README.md  ethercatInterfaceElmoConfig.cmake.in
eni/: 01_ENI_1Elmo_1000ms.xml  02_ENI_1Elmo_500ms.xml  03_ENI_1Elmo_250ms.xml  04_ENI_1Elmo_100ms.xml  05_ENI_1Elmo_50ms.xml  06_ENI_2Elmo_1000ms.xml  07_ENI_2Elmo_100ms.xml  08_ENI_2Elmo_125ms.xml  09_ENI_2Elmo_250ms.xml  10_ENI_2Elmo_1000ms_extended.xml  20_ENI_1Maxpos505_1000ms.xml  21_ENI_1Maxpos505_100ms.xml  22_ENI_1Maxpos505_50ms.xml  30_ENI_2Elmo_1Maxpos505_1000ms.xml  31_ENI_2Elmo_1Maxpos505_500ms.xml  32_ENI_2Elmo_1Maxpos505_250ms.xml  33_ENI_2Elmo_1Maxpos505_100ms.xml  34_ENI_2Elmo_1Maxpos505_50ms.xml
example_eeros/: MainSequence.hpp  MyControlSystem.cpp  MyControlSystem.hpp  MySafetyProperties.cpp  MySafetyProperties.hpp  SetElmoSeat.hpp  block_getElmos.hpp  block_printNumber.hpp  block_setElmos.hpp  block_timingPerformanceTester.hpp  globalConfig.hpp  main_eeros.cpp
example_standalone/: main.cpp
interface/: EtherCATInterfaceElmo.cpp  EtherCATInterfaceElmo.hpp  EtherCATInterfaceElmo_config.hpp
interface/base/: EtherCATInterfaceBase.cpp  EtherCATInterfaceBase.hpp  EtherCATInterfaceBase_config.hpp
scripts/: cmake.sh  make.sh  preperation.sh  start.sh  startExampleEEROS.sh  startExampleStandalone.sh
